[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bog = { path = "../bog" }

[dev-dependencies]
hecs = "0.10"

[[example]]
name = "function_dropper_1"

[[example]]
name = "object_tree_1"

[[example]]
name = "object_tree_2"

[[example]]
name = "object_tree_3"

[[example]]
name = "object_tree_4"

[[example]]
name = "object_tree_5"
