[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bog = { path = "../bog" }
hecs = "0.10"

[dev-dependencies]
bog = { path = "../bog" }
hecs = "0.10"
slotmap = "1"

[[example]]
name = "behavior_registry_1"

[[example]]
name = "behavior_registry_2"

[[example]]
name = "bog_ui_1"

[[example]]
name = "function_dropper_1"

[[example]]
name = "object_tree_1"

[[example]]
name = "object_tree_2"

[[example]]
name = "object_tree_3"

[[example]]
name = "object_tree_4"

[[example]]
name = "object_tree_5"

[[example]]
name = "object_tree_6"
